--- a/index.html
+++ b/index.html
@@ -1,12 +1,19 @@
 <!DOCTYPE html>
 <html>
+  
   <body>
     <header>
         <h1>Cool Newz</h1>
     </header>
+    <nav>
+      <button>Home</button>
+      <button>About the authors</button>
+    </nav>
+    <br>
     <article>
       <a href="articles/article_1.html">Alien Invasion Incoming</a><br>
       <a href="articles/article_2.html">Penguin Obesity Crisis</a><br>
   </article>
   </body>
 </html>
+
